JDK 11 fixes #2522